// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Console tracing exporter class Test removeSpanWithChildren method should clear printed spans 1`] = `
Object {
  "span1": Object {
    "children": Array [
      "span2",
      "span5",
    ],
    "span": Object {
      "id": "span1",
      "parentID": null,
    },
  },
  "span2": Object {
    "children": Array [
      "span3",
    ],
    "span": Object {
      "id": "span2",
      "parentID": "span1",
    },
  },
  "span3": Object {
    "children": Array [
      "span4",
    ],
    "span": Object {
      "id": "span3",
      "parentID": "span2",
    },
  },
  "span4": Object {
    "children": Array [],
    "span": Object {
      "id": "span4",
      "parentID": "span3",
    },
  },
  "span5": Object {
    "children": Array [],
    "span": Object {
      "id": "span5",
      "parentID": "span1",
    },
  },
  "span6": Object {
    "children": Array [],
    "span": Object {
      "id": "span6",
      "parentID": null,
    },
  },
}
`;

exports[`Test Console tracing exporter class Test spans printing should print full trace 1`] = `
Array [
  "[90m┌──────────────────────────────────────────────────────────────────────────────┐[39m",
  "[90m│ [39m[90mID: [39m[1mspan-1                                                [22m [90mDepth: [39m[1m3[22m [90mTotal: [39m[1m4[22m[90m │[39m",
  "[90m├──────────────────────────────────────────────────────────────────────────────┤[39m",
  "[90m│ [39m[1m[90m[39mSpan #1                     100ms [90m[[39m[90m[39m■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■[90m[39m[90m][39m[22m[90m │[39m",
  "[90m│ [39m[1m[33m[90m├─┬─ [39m[33mSpan #2 *               50ms [90m[[39m[33m[90m........[39m[33m■■■■■■■■■■■■■■■■■■■■[90m............[39m[33m[90m][39m[33m[22m[39m[90m │[39m",
  "[90m│ [39m[1m[36m[90m│ └─── [39m[36mSpan #22 (with lon... 25ms [90m[[39m[36m[90m..........[39m[36m■■■■■■■■■■[90m....................[39m[36m[90m][39m[36m[22m[39m[90m │[39m",
  "[90m│ [39m[1m[90m└─── [39mSpan #3                 75ms [90m[[39m[90m......[39m■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■[90m....[39m[90m][39m[22m[90m │[39m",
  "[90m└──────────────────────────────────────────────────────────────────────────────┘[39m",
]
`;

exports[`Test Console tracing exporter class Test spans printing should print full trace with error 1`] = `
Array [
  "[90m┌──────────────────────────────────────────────────────────────────────────────┐[39m",
  "[90m│ [39m[90mID: [39m[1mspan-1                                                [22m [90mDepth: [39m[1m3[22m [90mTotal: [39m[1m4[22m[90m │[39m",
  "[90m├──────────────────────────────────────────────────────────────────────────────┤[39m",
  "[90m│ [39m[1m[90m[39mSpan #1                     100ms [90m[[39m[90m[39m■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■[90m[39m[90m][39m[22m[90m │[39m",
  "[90m│ [39m[1m[33m[90m├─┬─ [39m[33mSpan #2 *               50ms [90m[[39m[33m[90m........[39m[33m■■■■■■■■■■■■■■■■■■■■[90m............[39m[33m[90m][39m[33m[22m[39m[90m │[39m",
  "[90m│ [39m[1m[36m[31m[90m│ └─── [39m[31m[36mSpan #22 » ×          25ms [90m[[39m[31m[36m[90m..........[39m[31m[36m■■■■■■■■■■[90m....................[39m[31m[36m[90m][39m[31m[36m[22m[39m[39m[90m │[39m",
  "[90m│ [39m[1m[90m└─── [39mSpan #3                 75ms [90m[[39m[90m......[39m■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■[90m....[39m[90m][39m[22m[90m │[39m",
  "[90m└──────────────────────────────────────────────────────────────────────────────┘[39m",
]
`;

exports[`Test Console tracing exporter class Test spans printing should print to the default logger 1`] = `
Array [
  "[90m┌──────────────────────────────────────────────────────────────────────────────┐[39m",
  "[90m│ [39m[90mID: [39m[1mspan-1                                                [22m [90mDepth: [39m[1m3[22m [90mTotal: [39m[1m4[22m[90m │[39m",
  "[90m├──────────────────────────────────────────────────────────────────────────────┤[39m",
  "[90m│ [39m[1m[90m[39mSpan #1                     100ms [90m[[39m[90m[39m■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■[90m[39m[90m][39m[22m[90m │[39m",
  "[90m│ [39m[1m[33m[90m├─┬─ [39m[33mSpan #2 *               50ms [90m[[39m[33m[90m........[39m[33m■■■■■■■■■■■■■■■■■■■■[90m............[39m[33m[90m][39m[33m[22m[39m[90m │[39m",
  "[90m│ [39m[1m[36m[90m│ └─── [39m[36mSpan #22 »            25ms [90m[[39m[36m[90m..........[39m[36m■■■■■■■■■■[90m....................[39m[36m[90m][39m[36m[22m[39m[90m │[39m",
  "[90m│ [39m[1m[90m└─── [39mSpan #3                 75ms [90m[[39m[90m......[39m■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■[90m....[39m[90m][39m[22m[90m │[39m",
  "[90m└──────────────────────────────────────────────────────────────────────────────┘[39m",
]
`;
